--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,8 +12,11 @@
     </div>
     <nav class="flex items-center justify-between flex-wrap bg-opacity-100 p-8">
         <div class="flex items-center flex-shrink-0 text-xl text-grey-900 mr-6">
-            <a href="{{ .Site.BaseURL }}"><img alt="{{ .Site.Params.logo.alt }}"
-                    class="{{ .Site.Params.logo.size }} mr-3" src="{{ .Site.Params.logo.main | relURL }}"></a>       
+            <a href="{{ .Site.BaseURL }}" class="flex items-center">
+                <img alt="{{ .Site.Params.logo.alt }}"
+                    class="{{ .Site.Params.logo.size }} mr-3" src="{{ .Site.Params.logo.main | relURL }}">
+                    <span class="font-bold text-2xl tracking-tig">{{ .Site.Title }}</span>
+                </a>       
         </div>
         <div class="block lg:hidden">
             <div id="hamburgerbtn" class="flex cursor-pointer items-center w-14 h-10 py-2 rounded mopen">
