--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -2,3 +2,57 @@
  This CSS file is used to override the existing styles of the theme.
  You can change the article headings, fonts, colors, etc.
 */
+
+
+/* 表单整体样式 */
+form {
+    max-width: 950px; /* 调整表单的最大宽度 */
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 25px; /* 表单项之间的间距 */
+}
+
+/* 输入框和文本区域的样式 */
+.input {
+    display: flex;
+    flex-direction: column;
+    gap: 5px; /* 标签和输入框之间的间距 */
+}
+
+.input label {
+    font-size: 16px;
+    color: #1a1919; /* 浅灰色字体 */
+}
+
+.input input[type="text"],
+.input input[type="email"],
+.input textarea {
+    width: 100%; /* 输入框宽度 */
+    padding: 8px; /* 较小的内边距 */
+    border: 1px solid #ccc; /* 较细的边框 */
+    border-radius: 8px; /* 较小的圆角 */
+    box-sizing: border-box;
+    font-size: 16px;
+}
+
+.input textarea {
+    resize: none; /* 禁止调整大小 */
+}
+
+/* 按钮样式 */
+button {
+    width: 15%; /* 按钮宽度 */
+    padding: 10px;
+    background-color: #0a577a; /* 蓝色背景 */
+    color: white;
+    border: none;
+    border-radius: 10px; /* 较大的圆角 */
+    cursor: pointer;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: #357ab8; /* 悬停时的深蓝色背景 */
+}
+
