--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,3 +21,4 @@
 {{ end }}
 <link href='{{ "/css/style.min.css" | relURL }}' rel="stylesheet" type="text/css">
 <link rel="stylesheet" href='{{ "/css/custom.css" | relURL }}'>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
