--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,24 +1,35 @@
+
 {{- partial "analytics" . -}}
 <meta charset="utf-8">
-<title>{{site.Title}}{{if not .IsHome}} | {{.Title}}{{end}}</title>
+<title>{{ .Site.Title }}{{ if not .IsHome }} | {{ .Title }}{{ end }}</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<link rel="apple-touch-icon" sizes="180x180" href='{{ "apple-touch-icon.png" | relURL }}'>
-<link rel="icon" type="image/png" sizes="32x32" href='{{ "favicon-32x32.png" | relURL }}'>
-<link rel="icon" type="image/png" sizes="16x16" href='{{ "favicon-16x16.png" | relURL }}'>
-<link rel="manifest" href='{{ "site.webmanifest" | relURL }}'>
+
+<!-- Favicon -->
+<link rel="apple-touch-icon" sizes="180x180" href='{{ "apple-touch-icon.png" | absURL }}'>
+<link rel="icon" type="image/png" sizes="32x32" href='{{ "favicon-32x32.png" | absURL }}'>
+<link rel="icon" type="image/png" sizes="16x16" href='{{ "favicon-16x16.png" | absURL }}'>
+<link rel="manifest" href='{{ "site.webmanifest" | absURL }}'>
+
+<!-- Font Awesome -->
 {{ if .Site.Params.icon.fontawesome }}
-<link href='{{ "/css/fa6.min.css" | relURL }}' rel="stylesheet" type="text/css">
+<link href='{{ "css/fa6.min.css" | absURL }}' rel="stylesheet" type="text/css">
 {{ end }}
+
+<!-- 处理 CSS 样式 -->
 {{ $styles := resources.Get "css/style.css" | postCSS }}
 {{ if hugo.IsServer }}
-<link rel="stylesheet" href="{{ $styles.RelPermalink }}">
+  <link rel="stylesheet" href="{{ $styles.RelPermalink }}">
 {{ else }}
-{{ $styles := $styles | minify | fingerprint | resources.PostProcess }}
-<link rel="stylesheet" href="{{ $styles.RelPermalink }}" />
+  {{ $styles := $styles | minify | fingerprint | resources.PostProcess }}
+  <link rel="stylesheet" href="{{ $styles.RelPermalink }}" />
 {{ end }}
+
+<!-- 其他 CSS -->
 {{ if .IsHome }}
-<link rel="stylesheet" href='{{ "/css/swiper-bundle.min.css" | relURL }}'>
+  <link rel="stylesheet" href='{{ "css/swiper-bundle.min.css" | absURL }}'>
 {{ end }}
-<link href='{{ "/css/style.min.css" | relURL }}' rel="stylesheet" type="text/css">
-<link rel="stylesheet" href='{{ "/css/custom.css" | relURL }}'>
+<link href='{{ "css/style.min.css" | absURL }}' rel="stylesheet" type="text/css">
+<link rel="stylesheet" href='{{ "css/custom.css" | absURL }}'>
+
+<!-- Google Material Icons -->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
