--- a/layouts/partials/slide.html
+++ b/layouts/partials/slide.html
@@ -2,7 +2,10 @@
     <div class="swiper-wrapper">
         {{ range $index, $slide := .Site.Data.slide }}
         <div class="swiper-slide">
-            <img src="{{ $slide.image }}" alt="{{ $slide.alt }}">
+            <picture>
+                <source srcset="{{ $slide.image | replaceRE "\\.jpg$|\\.png$" ".webp" }}" type="image/webp">
+                <img src="{{ $slide.image }}" alt="{{ $slide.alt | default $slide.title }}">
+            </picture>
             <div class="s-fade-txt text-center {{ if or (eq $index 0) (eq $index 2) }}s-fade-bg{{ end }}">
                 <h1 class="text-4xl font-bold text-white">{{ $slide.title }}</h1>
                 {{ if $slide.description }}
@@ -10,6 +13,7 @@
                 {{ end }}
             </div>
         </div>
+        
         {{ end }}
     </div>
     <div class="swiper-button-prev"></div>
