Add Tella theme file

--- a/layouts/shortcodes/feature-grid1.html
+++ b/layouts/shortcodes/feature-grid1.html
@@ -2,7 +2,11 @@
     {{ range .Site.Data.feature_grid1 }}
     <a href="{{ .doc_url }}" class="feature-card">
         <div class="feature-content">
+            {{ if .icon_img }}
+            <img src="{{ .icon_img }}" alt="{{ .title }} icon" class="feature-icon">
+            {{ else if .icon }}
             <span class="material-icons">{{ .icon }}</span>
+            {{ end }}
             <h3 class="feature-title">{{ .title }}</h3>
             <p class="feature-description">{{ .description }}</p>
         </div>
