update info to infos

--- a/layouts/shortcodes/contact-text-with-bg.html
+++ b/layouts/shortcodes/contact-text-with-bg.html
@@ -117,7 +117,7 @@ body {
         <span class="card-icon">🔷</span>
         <h2 class="card-title">Headquarters</h2>
         <ul>
-          <li>Email: <a href="mailto:info@turbotides.com">info@turbotides.com</a></li>
+          <li>Email: <a href="mailto:infos@turbotides.com">infos@turbotides.com</a></li>
           <li>Business Hours: Monday-Friday, 9:00 AM - 6:00 PM (UTC+8)</a></li>
         </ul>
       </div>
