--- a/themes/tella/layouts/_default/baseof.html
+++ b/themes/tella/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
 <head>
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2Q1C3BG03T"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-07EBEJK6JD"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
