--- a/themes/tella/layouts/_default/baseof.html
+++ b/themes/tella/layouts/_default/baseof.html
@@ -10,7 +10,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-2Q1C3BG03T');
+  gtag('config', 'G-07EBEJK6JD');
 </script>
 
   {{- partial "head.html" . -}}
